# linkshotter

./: Makefile  config.py  pyproject.toml
app/: forms.py  models.py  routes.py
app/templates/: index.html
migrations/versions/: b4d81b5f93c8_shortedlink_table.py
