[tool.poetry]
name = "linkshotter"
version = "0.1.0"
description = ""
authors = ["Rostislav Dolgushevskiy <rosdol246@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-WTF = "^0.15.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.0.1"
hashids = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
